Fix GitHub Pages documentation deployment
- Add .nojekyll file creation to docs workflow
- Create docs/README.md with documentation instructions
- Ensure proper GitHub Pages configuration

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -58,6 +58,10 @@ jobs:
         cd docs
         poetry run make html
         
+    - name: Create .nojekyll file
+      run: |
+        touch docs/_build/html/.nojekyll
+        
     - name: Upload documentation artifacts
       uses: actions/upload-artifact@v4
       with:
