--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ python = ">=3.11,<4.0"
 pods = "*"
 pandas = "*"
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.2.3"
+sphinx-rtd-theme = "^3.0.2"
+sphinx-autodoc-typehints = "^3.2.0"
+myst-parser = "^4.0.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
