Add missing runtime dependencies for docs build
- Add matplotlib, IPython, and scipy to main dependencies
- These are imported by the mlai module but were missing from pyproject.toml
- Fixes ModuleNotFoundError in CI documentation builds

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ classifiers = [
 python = ">=3.11,<4.0"
 pods = "*"
 pandas = "*"
+matplotlib = "*"
+IPython = "*"
+scipy = "*"
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^8.2.3"
