--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,15 @@ on:
       - 'pyproject.toml'
       - 'README.md'
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build-docs:
     runs-on: ubuntu-latest
@@ -48,12 +57,7 @@ jobs:
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install --with dev
-      
-    - name: Install Sphinx extensions and dependencies
-      run: |
-        poetry run pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints myst-parser
-        poetry install --with dev
-        
+              
     - name: Build documentation
       run: |
         cd docs
@@ -66,13 +70,17 @@ jobs:
     - name: Upload documentation artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: documentation
+        name: github-pages
         path: docs/_build/html/
         
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main'
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
-        force_orphan: true 
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build-docs
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 
