--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,14 @@ sphinx = "^8.2.3"
 sphinx-rtd-theme = "^3.0.2"
 sphinx-autodoc-typehints = "^3.2.0"
 myst-parser = "^4.0.1"
+pytest = "^8.0.0"
+pytest-cov = "^5.0.0"
+pytest-benchmark = "^4.0.0"
+hypothesis = "^6.100.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.dev-dependencies]
 
 [tool.poetry.extras]
 "mountain car demo" = ["GPy"]
