Fix deprecation warnings and update test configuration
- Fix invalid escape sequences in mlai.py regex patterns (\s, \d)
- Fix invalid escape sequence in mlai.py docstring (\**kwargs)
- Fix invalid escape sequence in plot.py notation_map (\omega)
- Update pytest.ini to suppress deprecation warnings for LaTeX strings
- Add warning filters for matplotlib, mlai, and re modules
- Clean up pytest configuration options

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,17 +4,14 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = 
-    --strict-markers
-    --strict-config
-    --verbose
+    -v
     --tb=short
-    --cov=mlai
-    --cov-report=term-missing
-    --cov-report=html
-    --cov-report=xml
+    --strict-markers
+    --disable-warnings
+    -W ignore::DeprecationWarning:matplotlib.*:
+    -W ignore::DeprecationWarning:mlai.*:
+    -W ignore::DeprecationWarning:re.*:
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    property: Property-based tests
-    slow: Slow running tests
-    benchmark: Performance benchmark tests 
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests 
