Fix lint errors: resolve undefined variables, add missing imports, and suppress LaTeX escape sequence warnings in config. Update .flake8 and pytest.ini to ignore non-critical warnings.

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,10 +7,14 @@ addopts =
     -v
     --tb=short
     --strict-markers
-    --disable-warnings
-    -W ignore::DeprecationWarning:matplotlib.*:
-    -W ignore::DeprecationWarning:mlai.*:
-    -W ignore::DeprecationWarning:re.*:
+    --strict-config
+    --verbose
+    --tb=short
+    --cov=mlai
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-report=xml
+    -W ignore::SyntaxWarning
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
