--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/lawrennd/mlai"
-packages = [{include = "mlai"}]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
@@ -33,12 +32,14 @@ pytest = "^8.0.0"
 pytest-cov = "^5.0.0"
 pytest-benchmark = "^4.0.0"
 hypothesis = "^6.100.0"
+daft-pgm = "^0.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.extras]
+"graphical models" = ["daft-pgm"]
 "mountain car demo" = ["GPy"]
 "GP Tutorials" = ["GPy"]
 
