Fix modular test imports and function references
- Update test_utils.py to import from mlai.utils instead of mlai.mlai
- Move load_pgm function from mlai.py to utils.py and update __init__.py
- Fix prod_kern tests to use correct function name prod_cov
- Fix abstract base class tests to use concrete LM implementation
- Make write_figure and other utilities available at package level

--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,4 @@ tenets/combine_tenets.py
 # VibeSafe documentation (system files)
 docs/whats_next_script.md
 docs/yaml_frontmatter_examples.md
+.cursor/rules/project_tenet_*.mdc
